# MeshAnalyser

./: CMakeLists.txt  Mesh.h  MeshAnalyser.cpp  MeshAnalyser.h  MeshAnalyser.ui  ObjParser.cpp  Triangle.h  TriangleMeshRenderer.h  camera.cpp  camera.h  main.cpp
Camera/: Camera.cpp  Camera.h  main.cpp
LogicLib/: logic.cpp  logic.h
Mesh/: Mesh.h  MeshAnalyser.cpp  MeshAnalyser.h  MeshAnalyser.qrc  ObjParser.cpp  ObjParser.h  Triangle.h  camera.cpp  camera.h  main.cpp
Tests/: Test.cpp
